(OK) v0.8.2: check version display in Windows and Linux

--- a/staralign.vcxproj
+++ b/staralign.vcxproj
@@ -53,6 +53,7 @@
     <ClInclude Include="protein.h" />
     <ClInclude Include="threadpool.h" />
     <ClInclude Include="threadpool_condition.h" />
+    <ClInclude Include="version.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="pthread-win32\windows\VS2022\pthread.2022.vcxproj">
