(OK) v0.9.0.0: Add fragment aligner; change the dependency relation in Windows compilation; remove unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,12 @@
 *.exe
 *.gcda
 *.gcno
-binaries/disttbfast
-disttbfast
 trace
 pre
 order
 staralign
-binaries/profilealign
 profilealign
+fragalign
 infile.tree
 .vs/*
 x64/*
