--- a/staralign.vcxproj
+++ b/staralign.vcxproj
@@ -19,49 +19,15 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="addfunctions.c" />
-    <ClCompile Include="blosum.c" />
-    <ClCompile Include="constants.c" />
-    <ClCompile Include="defs.c" />
-    <ClCompile Include="Falign.c" />
-    <ClCompile Include="fft.c" />
-    <ClCompile Include="fftFunctions.c" />
-    <ClCompile Include="Galign11.c" />
-    <ClCompile Include="io.c" />
-    <ClCompile Include="JTT.c" />
-    <ClCompile Include="Kband.c" />
-    <ClCompile Include="mltaln9.c" />
-    <ClCompile Include="mtxutl.c" />
-    <ClCompile Include="SAalignmm.c" />
-    <ClCompile Include="Salignmm.c" />
     <ClCompile Include="staralign.c" />
-    <ClCompile Include="tddis.c" />
-    <ClCompile Include="threadpool.c" />
-    <ClCompile Include="threadpool_condition.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="DNA.h" />
-    <ClInclude Include="dp.h" />
-    <ClInclude Include="fft.h" />
-    <ClInclude Include="functions.h" />
-    <ClInclude Include="Kband.h" />
-    <ClInclude Include="mafft.h" />
-    <ClInclude Include="miyata.h" />
-    <ClInclude Include="miyata5.h" />
-    <ClInclude Include="mltaln.h" />
-    <ClInclude Include="mtxutl.h" />
-    <ClInclude Include="protein.h" />
-    <ClInclude Include="threadpool.h" />
-    <ClInclude Include="threadpool_condition.h" />
-    <ClInclude Include="version.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="pthread-win32\windows\VS2022\pthread.2022.vcxproj">
-      <Project>{5d459ba0-5eeb-47d3-a1c4-6b55c8d37ec0}</Project>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="staralign.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="common_lib.vcxproj">
+      <Project>{716ace2b-16d8-4a15-8d4c-b4c652abea30}</Project>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -120,7 +86,7 @@
     <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
     <LibraryPath>$(LibraryPath)</LibraryPath>
     <ExternalIncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath)</ExternalIncludePath>
-    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\$(ProjectName)</OutDir>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <ReferencePath>$(ReferencePath)</ReferencePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -163,26 +129,33 @@
       <DisableSpecificWarnings>
       </DisableSpecificWarnings>
       <LanguageStandard_C>stdc11</LanguageStandard_C>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <AdditionalOptions>/FS %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <Version>0.8</Version>
     </Link>
+    <PostBuildEvent>
+      <Command>
+      </Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <WarningLevel>EnableAllWarnings</WarningLevel>
+      <WarningLevel>TurnOffAllWarnings</WarningLevel>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;enablemultithread;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <DisableSpecificWarnings>
       </DisableSpecificWarnings>
-      <AdditionalOptions>/wd4996 %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/FS %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>Default</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -190,6 +163,10 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Command>
+      </Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
