--- a/profilealign.rc
+++ b/profilealign.rc
@@ -53,8 +53,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION VER_MAJOR, VER_MINOR, VER_RELEASE, VER_BUILD
- PRODUCTVERSION VER_MAJOR, VER_MINOR, VER_RELEASE, VER_BUILD
+ FILEVERSION VER_MAJOR, VER_MINOR, VER_RELEASE_PROF, VER_BUILD
+ PRODUCTVERSION VER_MAJOR, VER_MINOR, VER_RELEASE_PROF, VER_BUILD
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -71,12 +71,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "wym6912"
             VALUE "FileDescription", "Profile-profile Alignment"
-            VALUE "FileVersion", VERSION_PROG
+            VALUE "FileVersion", VERSION_PROF
             VALUE "InternalName", "profilealign.exe"
             VALUE "LegalCopyright", "Copyright (C) 2022"
             VALUE "OriginalFilename", "profilealign.exe"
             //VALUE "ProductName", "Profile-profile Alignment"
-            //VALUE "ProductVersion", VERSION_PROG
+            //VALUE "ProductVersion", VERSION_PROF
         END
     END
     BLOCK "VarFileInfo"
