(OK) v0.10.0.0: Add find similar module && fix compilation error on all platforms

--- a/staralign.vcxproj.filters
+++ b/staralign.vcxproj.filters
@@ -21,4 +21,9 @@
       <Filter>资源</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource_staralign.h">
+      <Filter>资源</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
