--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pre
 order
 staralign
 profilealign
+profile_two_align
 fragalign
 findsim
 infile.tree
@@ -16,3 +17,4 @@ x64/*
 bin/*
 obj/*
 *.aps
+.vscode/*
