--- a/profilealign.vcxproj.filters
+++ b/profilealign.vcxproj.filters
@@ -6,9 +6,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="resource.h">
-      <Filter>资源</Filter>
-    </ClInclude>
+    <ClInclude Include="resource_profilealign.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="头文件">
