--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pthread-win32"]
 	path = pthread-win32
-	url = https://github.com/GerHobbelt/pthread-win32
+	url = git@gitee.com:wym6912/pthread-win32.git
