(OK) v1.0.1.0: remove useless arugment in staralign and fragalign; fix version display bug in fragalign

--- a/fragalign.rc
+++ b/fragalign.rc
@@ -75,7 +75,7 @@ BEGIN
             VALUE "InternalName", "fragalign.exe"
             VALUE "LegalCopyright", "Copyright (C) 2022"
             VALUE "OriginalFilename", "fragalign.exe"
-            VALUE "ProductVersion", VERSION_FRAG
+            //VALUE "ProductVersion", VERSION_FRAG
         END
     END
     BLOCK "VarFileInfo"
